--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@subframe7536/fonttools",
+  "name": "playground",
   "type": "module",
   "version": "0.1.1",
   "scripts": {
@@ -8,9 +8,6 @@
     "preview": "vite build && vite preview"
   },
   "devDependencies": {
-    "@subframe7536/fontools": "link:..",
-    "@types/node": "^20.17.14",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.10"
+    "@subframe7536/fonttools": "workspace:*"
   }
 }
